--- a/assets/home.css
+++ b/assets/home.css
@@ -16,7 +16,7 @@
   }
 }
 .homeGameLight .title .viewll {
-  color: var(--color-yellow);
+  color: #13bafe;
   display: flex;
   align-items: center;
   transition: transform 0.5s ease;
