--- a/assets/home.css
+++ b/assets/home.css
@@ -68,7 +68,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: var(--color-brown);
+  background: #0f8aff;
   -webkit-clip-path: polygon(0 0, 95% 0, 100% 59px, 100% 100%, 6% 100%, 0 88%);
           clip-path: polygon(0 0, 95% 0, 100% 59px, 100% 100%, 6% 100%, 0 88%);
 }
@@ -77,7 +77,7 @@
   position: absolute;
   width: calc(100% - 9px);
   height: calc(100% - 9px);
-  background: var(--color-brown);
+  background: #0f8aff;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
