--- a/assets/style.css
+++ b/assets/style.css
@@ -152,15 +152,15 @@ a:hover {
 
 .btnTheme_color {
   background-color: var(--color-yellow);
-  color: var(--color-blue);
+  color: white;
   transition: all 0.5s ease;
   box-shadow: 0px 8px 20px rgba(190, 123, 26, 0.25);
 }
 .btnTheme_color:hover {
-  background: transparent !important;
+  /* background: transparent !important;
   box-shadow: none !important;
   color: var(--color-yellow) !important;
-  border: 1px solid var(--color-yellow) !important;
+  border: 1px solid var(--color-yellow) !important; */
 }
 
 body {
@@ -336,8 +336,8 @@ body {
   padding: 5px;
 }
 .header .center ul li a:hover {
-  color: #fff !important;
-  text-decoration: none;
+  /* color: #fff !important;
+  text-decoration: none; */
 }
 .header .left {
   position: relative;
@@ -1160,16 +1160,16 @@ body {
   margin-right: 8px;
 }
 .social li a {
-  background: rgba(237, 154, 33, 0.12);
-  border: 1px solid rgba(237, 154, 33, 0.5);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 6px;
-  width: 35px;
-  height: 35px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.5s ease;
+  background: white;
+    border: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease;
 }
 .social li a i {
   color: var(--color-yellow);
