--- a/assets/home.css
+++ b/assets/home.css
@@ -683,3 +683,11 @@
     display: none;
   }
 }/*# sourceMappingURL=home.css.map */
+
+.app_info {
+  display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+}
+
